crates/kleene-core/src/io/snapshots/kleene_core__io__tikz__tests__renders_a_machine_with_loops_and_a_bidirectional_pair.snap
---
source: crates/kleene-core/src/io/tikz.rs
expression: "to_tikz(&machine, &row(&machine), Notation::default())"
---
% Requires, in your preamble:
%   \usepackage{tikz}
%   \usetikzlibrary{automata,positioning}
\begin{tikzpicture}[shorten >=1pt,node distance=2.4cm,on grid,auto,>=stealth]
  \node[state,initial] (s0) at (0.00,0.00) {$q0$};
  \node[state,accepting] (s1) at (2.40,0.00) {$q1$};
  \path[->]
    (s0) edge[loop above] node{$a$} (s0)
    (s0) edge[bend left=20] node{$b$} (s1)
    (s1) edge[bend left=20] node{$a$} (s0)
  ;
\end{tikzpicture}
